* Non-billable information now retained in db for timecards (Chris T)
* Corrected character encoding issue with backup scripts (Chris T)
* Changes in the single payment UI to minimize mouse movements (Erik H)
* Adding link to employee edit screen from user page (h/t H Sorli) (Chris T)
* Fixed: Can't designate managers (Chris T, bug  3486840)

Changelog for 1.3.12
* Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
* Corrected handling of accounts in dropdowns where () are present (Chris T)
* Corrected erroneous log messages from debugging 1.3.11 (Chris T)
* Autocomplete ajaxselect now work (degraded) without Javascript (Chris T)
* Autocomplete ajaxselect now accept full entry without waiting (Chris T)
* Inlined add_custom_field's argument names for autodocumentation (Chris T)
* Updated add_custom_field to run on PostgreSQL 9.0 (Chris T)
* Updated dists/rpm/build.sh to support RHEL 5 (Hilton D)
* Corrected stylesheet not set on error pages (Chris T)
* Tightened up permissions on menu items and employee management (Chris T)
* Corrected permissions on fixed asset depreciation workflow/menu (Chris T)
* Corrected Perl issues on _db_init when custom fields defined, 5.12 (Chris T)
* Adding missing permissions for editing parts (Chris T)
* Clarified string for vendor's part number in parts screen (Frans S)
* Recon checkbox now is set properly (Chris T)
* Corrected missing "search assets" menu item (Chris T)
* Net Book Value report now shows undepreciated assets (Chris T)
* Permissions fixes to fixed asset module (Chris T)
* Corrected NULL being saved in method for asset class (Chris T)
* Corrected UI glitch on saving asset class (Chris T)
* Updated Slony setup scripts (Chris T)

Hilton D is Hilton Day
Frans S is Frans van der Star
Chris T is Chris Travers

Changelog for 1.3.11
* Fixed outstanding report for payment reversal and partial payments (Chris T)
* Fixed handling of non-existing roles in menu grants (Chris T)