@@ -1,7 +1,7 @@
 <?lsmb PROCESS 'ui-header.html' ?>
 <?lsmb PROCESS 'elements.html' ?>
 
-<div class="title">Search Reconciliation Reports</div>
+<div class="title"><?lsmb text('Search Reconciliation Reports') ?></div>
         
 <div class="body">
         <form name="reconciliation__search" method="post" action="recon.pl" id="reconciliation__search">
