@@ -38,6 +38,15 @@
 		size = 14
 	} ?>
 	</div>
+        <div id="fx_row">
+        <?lsmb INCLUDE input element_data = {
+           label = text('Reconcile as FX') #'
+           value = 1
+           type = "checkbox"
+           checked = recon_fx
+           name = "recon_fx"
+        } ?>
+        </div>
 	<div id="button-row">
 	<?lsmb INCLUDE button element_data = {
 		type = "submit",
