@@ -47,6 +47,15 @@ END ?>
     text = text('Next') 
 } ?>
 </div>
+<div class="inputrow">
+<?lsmb INCLUDE button element_data = {
+    name = 'action'
+   value = 'skip_coa'
+    type = 'submit'
+   class = 'submit'
+    text = text('Skip') 
+} ?>
+</div>
 </div>
 </form>
 </div>
