@@ -44,6 +44,7 @@ Changelog for 1.3.13
 * Changes in the single payment UI to minimize mouse movements (Erik H)
 * Adding link to employee edit screen from user page (h/t H Sorli) (Chris T)
 * Fixed: Can't designate managers (Chris T, bug  3486840)
+* Can now skip adding the chart of accounts (Erik H)
 
 Changelog for 1.3.12
 * Corrected processing of <?lsmb tags in order/invoice numbers (Chris T)
